--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -420,24 +420,24 @@
       </div>
       <div class="login-buttons">
         {% if view == "signup" %}
-          <button class="btn-dope exp login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
+          <button class="btn-dope login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
             Login
           </button>
-          <button class="btn-dope exp signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="signup-collapse">
+          <button class="btn-dope signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="signup-collapse">
             Signup
           </button>
         {% elif view == "login" %}
-          <button class="btn-dope exp login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="login-collapse">
+          <button class="btn-dope login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="login-collapse">
             Login
           </button>
-          <button class="btn-dope exp signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
+          <button class="btn-dope signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
             Signup
           </button>
         {% else %}
-          <button class="btn-dope exp login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
+          <button class="btn-dope login-link" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="login-collapse">
             Login
           </button>
-          <button class="btn-dope exp signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
+          <button class="btn-dope signup-link" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false" aria-controls="signup-collapse">
             Signup
           </button>
         {% endif %}
