--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -6,11 +6,10 @@
         <i class="fas fa-arrow-left" title="Back"></i>
       </button>
       <div class="extra-options">
-        <a class="btn-dope reverse-toggle" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
+        <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse">
-          <i class="fas fa-angle-up fa-lg" title="Minimize"></i>
         </a>
-        <a class="btn-dope results-close" href="/">
+        <a class="btn-dope index-link" href="/">
           <i class="fas fa-times" title="Close"></i>
         </a>
       </div>
