--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -1,24 +1,27 @@
 <div class="container px-0">
-  <ul>
-    <li>
-      <a class="dopebar-link about-link" href="{% url 'about' %}">
-        About
-      </a>
-    </li>
-    <li>
-      <a class="dopebar-link contact-link" href="{% url 'contact' %}">
-        Contact
-      </a>
-    </li>
-    <li>
-      <a class="dopebar-link privacy-link" href="{% url 'privacy' %}">
-        Privacy
-      </a>
-    </li>
-    <li>
-      <a class="dopebar-link terms-link" href="{% url 'terms' %}">
-        Terms
-      </a>
-    </li>
-  </ul>
+  <div class="col-12 col-lg-4 dope-wrapper">
+    <ul>
+      <li>
+        <a class="dopebar-link contact-link" href="{% url 'contact' %}">
+          Contact
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link privacy-link" href="{% url 'privacy' %}">
+          Privacy
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link terms-link" href="{% url 'terms' %}">
+          Terms
+        </a>
+      </li>
+    </ul>
+    <p>
+      dopepod does not store any copyrighted files on its server. We only index and link to content provided by other sites.
+    </p>
+    <p>
+      dopepod 2018
+    </p>
+  </div>
 </div>
