--- a/index/templates/privacy.html
+++ b/index/templates/privacy.html
@@ -81,7 +81,7 @@
   Google
 </strong>
 <p>
-  Google's advertising requirements can be summed up by Google's Advertising Principles. They are put in place to provide a positive experience for users. <a href="https://support.google.com/adwordspolicy/answer/1316548?hl=en">https://support.google.com/adwordspolicy/answer/1316548?hl=en</a>
+  Google's advertising requirements can be summed up by Google's Advertising Principles. They are put in place to provide a positive experience for users. <a href="//support.google.com/adwordspolicy/answer/1316548?hl=en">support.google.com/adwordspolicy/answer/1316548?hl=en</a>
 </p>
 <p>
   We have not enabled Google AdSense on our site but we may do so in the future.
