--- a/index/templates/terms.html
+++ b/index/templates/terms.html
@@ -19,13 +19,13 @@
   of our affiliate / advertising partners may also use cookies.</p>
 <strong>License</strong>
 <p>Unless otherwise stated, dopepod and/or it’s licensors own the intellectual property rights for all material on dopepod.
-  All intellectual property rights are reserved. You may view and/or print pages from <a class="index-link" href="/">https://dopepod.me</a> for your own personal
+  All intellectual property rights are reserved. You may view and/or print pages from <a class="index-link" href="/">dopepod.me</a> for your own personal
   use subject to restrictions set in these terms and conditions.</p>
 <p>You must not:</p>
 <ul>
-  <li>Republish material from <a class="index-link" href="/">https://dopepod.me</a></li>
-  <li>Sell, rent or sub-license material from <a class="index-link" href="/">https://dopepod.me</a></li>
-  <li>Reproduce, duplicate or copy material from <a class="index-link" href="/">https://dopepod.me</a></li>
+  <li>Republish material from <a class="index-link" href="/">dopepod.me</a></li>
+  <li>Sell, rent or sub-license material from <a class="index-link" href="/">dopepod.me</a></li>
+  <li>Reproduce, duplicate or copy material from <a class="index-link" href="/">dopepod.me</a></li>
 </ul>
 <p>Redistribute content from dopepod (unless content is specifically made for redistribution).</p>
 <strong>Hyperlinking to our Content</strong>
