--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -16,12 +16,24 @@
           Terms
         </a>
       </li>
+      <li>
+        <a class="dopebar-link" href="//www.facebook.com/Dopepod-183565408908728">
+          <i class="fab fa-facebook-f" title="Facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link" href="#">
+          <i class="fab fa-twitter" title="Twitter"></i>
+        </a>
+      </li>      
     </ul>
     <p>
       dopepod does not store any copyrighted files on its server. We only index and link to content provided by other sites.
     </p>
     <p>
-      dopepod 2018
+      <strong>
+        dopepod 2018
+      </strong>
     </p>
   </div>
 </div>
