--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -88,7 +88,7 @@
           <form class="form-inline search-form d-none d-xl-inline-block" method="GET" action="{% url 'search' %}">
             <label for="q" class="sr-only">Search for podcasts</label>
             <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-            aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+            aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
             <button class="search-button" type="submit">
               <i class="fa fa-search icon" title="Search"></i>
             </button>
@@ -100,7 +100,7 @@
       <form class="form-inline search-form d-inline-block d-xl-none" method="GET" action="{% url 'search' %}">
         <label for="q" class="sr-only">Search for podcasts</label>
         <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-        aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+        aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
         <button class="search-button" type="submit">
           <i class="fa fa-search icon" title="Search"></i>
         </button>
