--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -18,12 +18,12 @@
           {% csrf_token %}
           <div class="dope-form-group">
             <label class="sr-only" for="reset-password1">Password</label>
-            <input class="dope-field" type="password" name="password1" placeholder="Password" required id="reset-password1">
+            <input class="dope-field" type="password" name="password1" placeholder="Password" required id="reset-password1" />
           </div>
           <div class="form-row">
             <div class="col dope-form-group">
               <label class="sr-only" for="reset-password2">Password (again)</label>
-              <input class="dope-field" type="password" name="password2" placeholder="Password (again)" required="" id="reset-password2">
+              <input class="dope-field" type="password" name="password2" placeholder="Password (again)" required id="reset-password2" />
             </div>
             <div class="col-auto">
               <button type="submit" class="btn-dope active">Reset</button>
