--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -9,17 +9,17 @@
         <div class="form-row">
           <div class="col-12 dope-form-group">
             <label for="settings-oldpassword">Old password</label>
-            <input class="dope-field" type="password" name="oldpassword" required id="settings-oldpassword">
+            <input class="dope-field" type="password" name="oldpassword" required id="settings-oldpassword" />
           </div>
           <div class="col-12 dope-form-group">
             <label for="settings-password1">New password</label>
-            <input class="dope-field" type="password" name="password1" required id="settings-password1">
+            <input class="dope-field" type="password" name="password1" required id="settings-password1" />
           </div>
           <div class="col-12 dope-form-group">
             <label for="settings-password2">New password (again)</label>
           </div>
           <div class="col dope-form-group">
-            <input class="dope-field" type="password" name="password2" required="" id="settings-password2">
+            <input class="dope-field" type="password" name="password2" required id="settings-password2" />
           </div>
           <div class="col-auto">
             <button class="btn-dope active" type="submit">
@@ -47,7 +47,7 @@
             <label for="email">Email</label>
           </div>
           <div class="col dope-form-group">
-            <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
+            <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}" />
           </div>
           <div class="col-auto">
             <button class="btn-dope" type="submit">Save</button>
