--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -25,7 +25,7 @@
             <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
               <label for="q" class="sr-only">Search for podcasts</label>
               <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
               <button class="search-button" type="submit">
                 <i class="fa fa-search icon" title="Search"></i>
               </button>
@@ -40,13 +40,13 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}">
+                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password" required id="login-password">
+                  <input class="dope-field" type="password" name="password" required id="login-password" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Login</button>
@@ -77,17 +77,17 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email">
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
-                  <input class="dope-field" type="password" name="password1" required id="signup-password1">
+                  <input class="dope-field" type="password" name="password1" required id="signup-password1" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password2">Password (again)</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password2" required="" id="signup-password2">
+                  <input class="dope-field" type="password" name="password2" required id="signup-password2" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Signup</button>
@@ -106,7 +106,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required>
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -128,7 +128,7 @@
             <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
               <label for="q" class="sr-only">Search for podcasts</label>
               <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
               <button class="search-button" type="submit">
                 <i class="fa fa-search icon" title="Search"></i>
               </button>
@@ -140,13 +140,13 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}">
+                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password" required id="login-password">
+                  <input class="dope-field" type="password" name="password" required id="login-password" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Login</button>
@@ -177,17 +177,17 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email">
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
-                  <input class="dope-field" type="password" name="password1" required id="signup-password1">
+                  <input class="dope-field" type="password" name="password1" required id="signup-password1" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password2">Password (again)</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password2" required="" id="signup-password2">
+                  <input class="dope-field" type="password" name="password2" required id="signup-password2" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Signup</button>
@@ -206,7 +206,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required>
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -225,7 +225,7 @@
             <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
               <label for="q" class="sr-only">Search for podcasts</label>
               <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
               <button class="search-button" type="submit">
                 <i class="fa fa-search icon" title="Search"></i>
               </button>
@@ -240,13 +240,13 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}">
+                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password" required id="login-password">
+                  <input class="dope-field" type="password" name="password" required id="login-password" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Login</button>
@@ -277,17 +277,17 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email">
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
-                  <input class="dope-field" type="password" name="password1" required id="signup-password1">
+                  <input class="dope-field" type="password" name="password1" required id="signup-password1" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password2">Password (again)</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password2" required="" id="signup-password2">
+                  <input class="dope-field" type="password" name="password2" required id="signup-password2" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Signup</button>
@@ -306,7 +306,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required>
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -325,7 +325,7 @@
             <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
               <label for="q" class="sr-only">Search for podcasts</label>
               <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
               <button class="search-button" type="submit">
                 <i class="fa fa-search icon" title="Search"></i>
               </button>
@@ -340,13 +340,13 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}">
+                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password" required id="login-password">
+                  <input class="dope-field" type="password" name="password" required id="login-password" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Login</button>
@@ -377,17 +377,17 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email">
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
-                  <input class="dope-field" type="password" name="password1" required id="signup-password1">
+                  <input class="dope-field" type="password" name="password1" required id="signup-password1" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password2">Password (again)</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" type="password" name="password2" required="" id="signup-password2">
+                  <input class="dope-field" type="password" name="password2" required id="signup-password2" />
                 </div>
                 <div class="col-auto">
                   <button type="submit" class="btn-dope active">Signup</button>
@@ -406,7 +406,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required>
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
