--- a/index/templates/contact.html
+++ b/index/templates/contact.html
@@ -10,17 +10,17 @@
       <div class="form-row">
         <div class="col-12 dope-form-group">
           <label for="title">Title</label>
-          <input class="dope-field" type="title" name="title" id="title" />
+          <input class="dope-field" type="title" name="title" id="title" required />
         </div>
         <div class="col-12 dope-form-group">
           <label for="message">Message</label>
-          <textarea rows="6" class="dope-field" type="message" name="message" id="message"></textarea>
+          <textarea rows="6" class="dope-field" type="message" name="message" id="message" required></textarea>
         </div>
         <div class="col-12 dope-form-group">
           <label for="email">Email</label>
         </div>
         <div class="col dope-form-group">
-          <input class="dope-field" type="email" name="email" id="email" />
+          <input class="dope-field" type="email" name="email" id="email" required />
         </div>
         <div class="col-auto">
           <button class="btn-dope" type="submit">Send</button>
