--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -40,7 +40,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -77,7 +77,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required autofocus id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -106,7 +106,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -140,7 +140,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -177,7 +177,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required autofocus id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -206,7 +206,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -240,7 +240,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -277,7 +277,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" autofocus required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -306,7 +306,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -340,7 +340,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus="autofocus" required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -377,7 +377,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required autofocus id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -406,7 +406,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
