--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -48,7 +48,7 @@
           </button>
         </form>
       {% else %}
-        <a class="dopebar-link login-link d-inline-block d-xl-none" href="/?view=login">
+        <a class="dopebar-link login-link d-xl-none" href="/?view=login">
           <i class="fas fa-sign-in-alt" title="Login"></i>
         </a>
       {% endif %}
@@ -85,7 +85,7 @@
           </li>
         {% endif %}
         <li>
-          <form class="form-inline search-form d-none d-xl-inline-block" method="GET" action="{% url 'search' %}">
+          <form class="search-form" method="GET" action="{% url 'search' %}">
             <label for="q" class="sr-only">Search for podcasts</label>
             <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
             aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
@@ -97,17 +97,23 @@
       </ul>
     </div>
     <div class="col-12 collapse d-xl-none" id="dopebar-collapse">
-      <form class="form-inline search-form d-inline-block d-xl-none" method="GET" action="{% url 'search' %}">
-        <label for="q" class="sr-only">Search for podcasts</label>
-        <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-        aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
-        <button class="search-button" type="submit">
-          <i class="fa fa-search icon" title="Search"></i>
-        </button>
-      </form>   
-      <a class="dopebar-link lights-toggle" href="#">
-        <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
-      </a>
+      <ul>
+        <li>
+          <form class="search-form" method="GET" action="{% url 'search' %}">
+            <label for="q" class="sr-only">Search for podcasts</label>
+            <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
+            aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
+            <button class="search-button" type="submit">
+              <i class="fa fa-search icon" title="Search"></i>
+            </button>
+          </form>   
+        </li>
+        <li>
+          <a class="dopebar-link lights-toggle" href="#">
+            <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
+          </a>
+        </li>
+      </ul>
       <ul>
         <li>
           <a class="dopebar-link browse-link" href="{% url 'search' %}">
