donation beg fix

--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -67,7 +67,7 @@
         <i class="fas fa-times"></i>
       </button>
       <p>
-        dopepod has no ads, but hosting a website is not free. Please consider a small
+        dopepod has no ads, but hosting a website is not free. To support this service, please consider a
       </p>
       <form action="//www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_donations">
